k8s/base/ingress-nginx-nodeport.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080  # NodePort в диапазоне 30000-32767
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30443
